Fixed ios browser issue, change button position so it is visible

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -85,7 +85,7 @@
   border: unset;
   background: var(--color-secondary);
   cursor: pointer;
-  margin-bottom: 2rem;
+  margin-bottom: 5rem;
 }
 
 .toggle-overlay {
